6773838: There is no calling stack for Compiler thread in hs_err file on x86

On solaris, the inline assembly wasn't being processed.  Added volatile to il file fixed it.

Reviewed-by: phh, kvn